[package]
name = "minimal_no_std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1

[profile.dev]
panic = "abort"

[build]
target = "thumbv7m-none-eabi"

[dependencies]
